overflow fixed

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,3 +14,7 @@
 .btn.btn-square {
   border-radius: 0;
 }
+
+#app {
+	overflow: hidden;
+}
